gdpr + google analytics + small fixes

--- a/qdrant-landing/themes/qdrant/layouts/_default/baseof.html
+++ b/qdrant-landing/themes/qdrant/layouts/_default/baseof.html
@@ -1,7 +1,9 @@
 {{- partial "header.html" . -}}
 
+{{- partial "second_header.html" . -}}
+
 <div id="content">
-{{- block "main" . }}{{- end }}
+    {{ block "main" . }}{{ end }}
 </div>
 
 {{- partial "footer.html" . -}}
