remove unused images

--- a/qdrant-landing/themes/qdrant/layouts/index.html
+++ b/qdrant-landing/themes/qdrant/layouts/index.html
@@ -56,7 +56,7 @@
           <div class="image-column col-lg-6 col-md-12 col-sm-12">
             <div class="inner-column">
               <div data-depth="0.30" class="image">
-                <img src="/images/cube_less_dots_purple.png" alt=""/>
+                <img src="/images/cube.png" alt=""/>
               </div>
             </div>
           </div>
