add documentation section (not public yet)

--- a/qdrant-landing/themes/qdrant/layouts/solutions/list.html
+++ b/qdrant-landing/themes/qdrant/layouts/solutions/list.html
@@ -19,7 +19,7 @@
                 <div class="news-block-two">
                     <div class="inner-box">
                         <div class="upper-box">
-                            <h4><a href="blog-detail.html">{{ .Title }}</a></h4>
+                            <h4><a href="{{ .Params.default_link }}">{{ .Title }}</a></h4>
                             <!-- <div class="category">{{ .Params.subtitle }}</div> -->
                         </div>
                         <div class="image">
