--- a/qdrant-landing/themes/qdrant/layouts/index.html
+++ b/qdrant-landing/themes/qdrant/layouts/index.html
@@ -13,7 +13,7 @@
               <h2><a target="_blank" href="{{ .Site.Params.github }}">Open Source</a></h2>
               <h1>Neural Search Engine</h1>
               <div class="sec-title text mb-3">Build your own
-                proprietary AI products.
+                exclusive AI products.
                 <br/>
                 
 
