--- a/qdrant-landing/themes/qdrant/layouts/partials/docs_sidebar.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/docs_sidebar.html
@@ -18,5 +18,8 @@
             {{ end }}
         </div>
         {{ end }}
+        
+        <br/>
+        <p style="padding: .375rem .75rem;">Docs version: {{ .Site.Params.docVersion }}</p>
     </div>
 </nav>
