--- a/qdrant-landing/themes/qdrant/layouts/documentation/single.html
+++ b/qdrant-landing/themes/qdrant/layouts/documentation/single.html
@@ -3,7 +3,7 @@
 <div class="col-lg-8 col-md-8 col-12 pb-5">
     <div style="overflow: auto">
             <p style="float: right">
-            <a href="{{ .Site.Params.githubDocPrefix }}{{ .File.LogicalName }}">Edit on GitHub</a>
+            <a href="{{ .Site.Params.githubDocPrefix }}{{ .File.LogicalName }}" target="_blank" >Edit on GitHub</a>
         </p>
     </div>
 
