add: terms and conditions

--- a/qdrant-landing/themes/qdrant/layouts/partials/footer.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/footer.html
@@ -29,6 +29,7 @@
                 <li> <span class="icon fa fa-star"></span> Icons made by <a href="https://www.flaticon.com/authors/srip" title="srip">srip</a> from <a href="https://www.flaticon.com/" title="Flaticon">flaticon.com</a></li>
                 <li> <span class="icon fa fa-file"></span> <a href="/legal/privacy-policy">Privacy Policy </a> </li>
                 <li> <span class="icon fa fa-file"></span> <a href="/legal/impressum">Impressum </a> </li>
+                <li> <span class="icon fa fa-file"></span> <a href="/legal/terms_and_conditions">Terms & Conditions</a> </li>
               </ul>
             </div>
 
