--- a/qdrant-landing/themes/qdrant/layouts/partials/second_header.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/second_header.html
@@ -5,7 +5,7 @@
         <h1> {{ .Params.title | safeHTML }}</h1>
         <ul class="bread-crumb clearfix">
             <li><a href="/"><i class="flaticon-home small"></i> Home</a></li>
-            {{ $paths := (split .URL "/") }}
+            {{ $paths := (split .RelPermalink "/") }}
             {{ $len := sub (len $paths) 2 }}
             {{ range first $len $paths }}
                 {{ if gt (len . ) 0 }}
