--- a/qdrant-landing/themes/qdrant/layouts/index.html
+++ b/qdrant-landing/themes/qdrant/layouts/index.html
@@ -18,7 +18,7 @@
                 
 
                 <div class="code mt-3">
-                  <code id="copy-code">docker pull generall/qdrant</code>
+                  <code id="copy-code">docker pull qdrant/qdrant</code>
                   <span class="d-inline-block" id="copy-popover" data-toggle="popover" data-content="Text copied!">
                     <button class="copy-btn lead ml-2" data-clipboard-target="#copy-code" title="Copy code">
                       <i class="flaticon-copy"></i>
@@ -37,7 +37,7 @@
               <!-- <section class="installation-section">
                 <p>Get started by downloading a pre-build Docker Image - it is only 35Mb!</p>
                 <div class="code">
-                  <code id="copy-code">docker pull generall/qdrant</code>
+                  <code id="copy-code">docker pull qdrant/qdrant</code>
                   <span class="d-inline-block" id="copy-popover" data-toggle="popover" data-content="Text copied!">
                     <button class="copy-btn lead ml-2" data-clipboard-target="#copy-code" title="Copy code">
                       <i class="flaticon-copy"></i>
