documentation style fixes

--- a/qdrant-landing/themes/qdrant/layouts/documentation/list.html
+++ b/qdrant-landing/themes/qdrant/layouts/documentation/list.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<article class="col-lg-8 col-md-8 col-12 pb-5">
+<article class="col-lg-8 col-md-8 col-11 pb-5 offset-1 offset-md-0">
 
     {{ .Content }}
 
