--- a/qdrant-landing/themes/qdrant/layouts/documentation/single.html
+++ b/qdrant-landing/themes/qdrant/layouts/documentation/single.html
@@ -1,9 +1,9 @@
 {{ define "main" }}
 
-<div class="col-lg-8 col-md-8 col-12 pb-5">
+<div class="col-lg-8 col-md-8 col-11 pb-5 offset-1 offset-md-0">
     <div style="overflow: auto">
             <p style="float: right">
-            <a href="{{ .Site.Params.githubDocPrefix }}{{ .File.LogicalName }}" target="_blank" >Edit on GitHub</a>
+            <a href="{{ .Site.Params.githubDocPrefix }}{{ .File.LogicalName }}" target="_blank" >Edit on GitHub <i class="flaticon-github"></i></a>
         </p>
     </div>
 
