--- a/qdrant-landing/themes/qdrant/layouts/partials/css.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/css.html
@@ -5,6 +5,7 @@
 <link href="{{ "css/qdrant.css" | absURL }}" rel="stylesheet">
 <link href="{{ "css/responsive.css" | absURL }}" rel="stylesheet">
 <link href="{{ "css/cookit.css" | absURL }}" rel="stylesheet">
+<link href="{{ "css/article.css" | absURL }}" rel="stylesheet">
 
 
 {{/*
@@ -25,4 +26,4 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family={{ .Site.Params.font }}&display=swap">
 
 <!-- highlight.js -->
-{{ if .Site.Params.highlight | default false }} <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.7.1/styles/default.min.css"> {{ end }}
+{{ if .Site.Params.highlight | default false }} <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.4.0/styles/default.min.css"> {{ end }}
