add google tag manager

--- a/qdrant-landing/themes/qdrant/layouts/partials/header.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/header.html
@@ -35,6 +35,14 @@
             </script>
         {{ end }}
 
+        {{ if .Site.Params.googleTagManager }}
+            <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+            new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+            j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+            'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+            })(window,document,'script','dataLayer','{{ .Site.Params.googleTagManager }}');</script>
+        {{ end }}
+
 
         <!--[if lt IE 9]>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script><![endif]-->
@@ -44,6 +52,10 @@
     </head>
 
     <body>
+        {{ if .Site.Params.googleTagManager }}
+            <noscript><iframe src="https://www.googletagmanager.com/ns.html?id={{ .Site.Params.googleTagManager }}"
+            height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+        {{ end }}
 
         <div class="page-wrapper">
 
