language switcher for documentation pages

--- a/qdrant-landing/themes/qdrant/layouts/partials/css.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/css.html
@@ -27,3 +27,4 @@
 
 <!-- highlight.js -->
 {{ if .Site.Params.highlight | default false }} <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.4.0/styles/default.min.css"> {{ end }}
+<link rel="stylesheet" href="{{ "css/lang-switcher.css" | absURL }}">
