--- a/qdrant-landing/themes/qdrant/layouts/documentation.html
+++ b/qdrant-landing/themes/qdrant/layouts/documentation.html
@@ -370,21 +370,15 @@
 <script src="js/clipboard.min.js"></script>
 <script>
   var clipboard = new ClipboardJS('.copy-btn');
-  $('.alert').hide();
 
-  clipboard.on('success', function (e) {
-    $('.alert').alert().show().addClass('show');
+  clipboard.on('success', function(e) {
+    $('#copy-popover').popover('show')
     const to = setTimeout(() => {
-      $('.alert').alert().removeClass('show').hide();
+      $('#copy-popover').popover('hide')
+      $('#modal').modal('show')
       clearTimeout(to);
-    }, 2000);
-
+    }, 3000);
     e.clearSelection();
-  });
-
-  clipboard.on('error', function (e) {
-    console.error('Action:', e.action);
-    console.error('Trigger:', e.trigger);
   });
 </script>
 
