moved blog post previews to partials

--- a/qdrant-landing/themes/qdrant/layouts/blog/list.html
+++ b/qdrant-landing/themes/qdrant/layouts/blog/list.html
@@ -74,44 +74,8 @@
                             <div class="our-blogs">
                                 {{ range .Pages }}
 
-                                {{ $link := .Permalink }}
-                                {{ if .Params.external_link }}
-                                {{ $link = .Params.external_link }}
-                                {{ end }}
+                                {{ partial "blogpost-preview" . }}
 
-
-                                {{ if .Params.short_description }}
-                                <!-- News block Two -->
-                                <div class="news-block-two">
-                                    <div class="inner-box">
-                                        <div class="upper-box">
-                                            <h4><a href="{{ $link }}">{{ .Title }}</a></h4>
-                                        </div>
-                                        <div class="image">
-                                            <a href="{{ $link }}"><img src="{{ .Params.preview_image }}"
-                                                                            alt=""/></a>
-                                        </div>
-                                        <div class="lower-box">
-                                            <p>{{ .Params.short_description | markdownify }}</p>
-                                            <div class="clearfix">
-                                                <div class="pull-left">
-                                                    <ul class="post-meta">
-                                                        <li><span class="fa fa-user mr-1"></span>{{ .Params.author
-                                                            }}
-                                                        </li>
-                                                        <li><span class="fa fa-calendar mr-1"></span>{{ .Date.Format "January 2, 2006" }}
-                                                        </li>
-                                                    </ul>
-                                                </div>
-                                                <div class="pull-right">
-                                                    <a href="{{ $link }}" class="theme-btn btn-style-five"><span
-                                                            class="txt">Learn More...</span></a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                {{ end }}
                                 {{ end }}
 
                             </div>
