blog categories and tags

--- a/qdrant-landing/themes/qdrant/layouts/blog/list.html
+++ b/qdrant-landing/themes/qdrant/layouts/blog/list.html
@@ -1,91 +1,3 @@
 {{ define "main" }}
-
-<section>
-    <div class="auto-container pt-5">
-        <div class="row clearfix">
-
-            <!-- Sidebar Page Container -->
-            <div class="sidebar-page-container">
-                <div class="auto-container">
-                    <div class="row clearfix">
-
-                        <!-- Sidebar Side -->
-                        <div class="sidebar-side col-lg-4 col-md-12 col-sm-12">
-                            <aside class="sidebar sticky-top">
-
-                                {{ range where (where .Pages "Section" "blog") ".Params.featured" "=" true }}
-                                <!-- Featured Post Widget -->
-                                {{ $link := .Permalink }}
-                                {{ if .Params.external_link }}
-                                {{ $link = .Params.external_link }}
-                                {{ end }}
-                                <div class="sidebar-title">
-                                    <h4>Featured Post</h4>
-                                </div>
-                                <!-- News Widget -->
-                                <div class="news-widget sidebar-widget">
-                                    <div class="inner-box">
-                                        <div class="image">
-                                            <a href="{{ $link }}"><img src="https://via.placeholder.com/370x223"
-                                                                            alt=""/></a>
-                                        </div>
-                                        <div class="lower-content">
-                                            <h5><a href="{{ $link }}">{{ .Title }}</a></h5>
-                                            <div class="text">{{ .Params.short_description | markdownify }}</div>
-                                            <a href="{{ $link }}" target="_blank" class="learn">Learn More</a>
-                                        </div>
-                                    </div>
-                                </div>
-                                {{ end }}
-
-                                <!-- Categories Widget -->
-                                <div class="sidebar-widget categories-widget">
-                                    <div class="sidebar-title">
-                                        <h4>Categories</h4>
-                                    </div>
-                                    <div class="widget-content">
-                                        <ul>
-                                            {{ range $name, $taxonomy := .Site.Taxonomies.categories }}
-                                            <li><a href="{{ "/categories/" | relLangURL }}{{ $name | urlize }}">{{ $name }}</a></li>
-                                            {{end}}
-                                        </ul>
-                                    </div>
-                                </div>
-
-                                <!-- Tags Widget -->
-                                <div class="sidebar-widget tags-widget">
-                                    <div class="sidebar-title">
-                                        <h4>Tags</h4>
-                                    </div>
-                                    <div class="widget-content">
-                                        <ul>
-                                            {{ range $name, $taxonomy := .Site.Taxonomies.tags }}
-                                            <li><a href="{{ "/tags/" | relLangURL }}{{ $name | urlize }}">{{ $name }}</a></li>
-                                            {{end}}
-                                        </ul>
-                                    </div>
-                                </div>
-
-                            </aside>
-                        </div>
-
-                        <!-- Content Side -->
-                        <div class="content-side col-lg-8 col-md-12 col-sm-12">
-                            <div class="our-blogs">
-                                {{ range .Pages }}
-
-                                {{ partial "blogpost-preview" . }}
-
-                                {{ end }}
-
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
+    {{ partial "sidebar-list" . }}
 {{ end }}
